[project]
name = "chess-cli"
requires-python = ">=3.12"

[tool.poetry]
name = "chess-cli"
version = "0.1.0"
description = "A repl to edit and analyse chess games."
authors = ["Tage Johansson <tajo9185@uu.student.se>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
chess-cli = 'chess_cli.main:main'

[tool.poetry.dependencies]
python = "^3.12"
cmd2 = "^2.4.3"
chess = "^1.10.0"
appdirs = "^1.4.4"
toml = "^0.10.2"
more-itertools = "^10.2.0"
psutil = "^5.9.8"
berserk = "^0.13.2"
authlib = "^1.3.0"
requests = "^2.31.0"
prompt-toolkit = "^3.0.43"
pyaudio = "^0.2.14"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
mypy = "^1.8.0"
nuitka = "^1.9.7"
types-psutil = "^5.9.5.20240106"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
types-requests = "^2.31.0.20240125"
docformatter = "^1.7.5"
pyright = "^1.1.350"
isort = "^5.13.2"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
fast = true
preview = true
src = "chess_cli/"

[tool.docformatter]
in-place = true
recursive = true
black = true
wrap-summeries = 100
wrap-descriptions = 100

[tool.isort]
src_paths = ["chess_cli/"]
profile = "black"
line_length = 100
py_version = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff
    "I",  # isort
    "D",  # pydocstyle
]
ignore = ["D1", "D2", "D401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
files = "chess_cli/*.py"
check_untyped_defs = true
warn_unreachable = true

[tool.pyright]
include = ["chess_cli/"]
reportWildcardImportFromLibrary = false
