[project]
name = "chess-cli"
requires-python = ">=3.12, <3.13"
version = "0.3.3"
license = "GPL-3.0-or-later"

[project.urls]
homepage = "https://github.com/tage64/chess-cli"
documentation = "https://github.com/tage64/chess-cli/blob/main/doc/manual.md"

[tool.poetry]
name = "chess-cli"
version = "0.3.3"
description = "A repl to edit and analyse chess games."
authors = ["Tage Johansson <tajo9185@student.uu.se>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
chess-cli = 'chess_cli.main:main'

[tool.poetry.dependencies]
python = "~3.12"
chess = "^1.10.0"
appdirs = "^1.4.4"
toml = "^0.10.2"
more-itertools = "^10.2.0"
psutil = "^5.9.8"
berserk = "^0.13.2"
authlib = "^1.3.0"
requests = "^2.31.0"
prompt-toolkit = "^3.0.43"
pyaudio = "^0.2.14"
cairosvg = "^2.7.1"
pydantic = "^2.6.4"
spdx-license-list = "^3.23"
punwrap = {git = "https://github.com/tage64/punwrap"}
inflect = "^7.3.1"
typeguard = {git = "https://github.com/tage64/typeguard"}
pyperclip = "^1.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
types-requests = "^2.31.0.20240125"
pyright = "^1.1.369"
pyinstaller = "^6.5.0"
ruff = "^0.5.0"
nuitka = "^2.3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
fast = true
preview = true
src = "chess_cli/"

[tool.docformatter]
in-place = true
recursive = true
black = true
wrap-summeries = 100
wrap-descriptions = 100

[tool.isort]
src_paths = ["chess_cli/"]
profile = "black"
line_length = 100
py_version = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff
    "I",  # isort
    "D",  # pydocstyle
]
ignore = ["D1", "D2", "D401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
files = "chess_cli/*.py"
check_untyped_defs = true
warn_unreachable = true

[tool.pyright]
include = ["chess_cli/"]
reportWildcardImportFromLibrary = false
reportIncompatibleMethodOverride = false  # Bug in pyright: Incorrectly classifies setting a setter as an error.
