[project]
name = "chess-cli"
requires-python = ">=3.12, <3.13"
version = "0.6.1"
license = "GPL-3.0-or-later"

[project.urls]
homepage = "https://github.com/tage64/chess-cli"
documentation = "https://github.com/tage64/chess-cli/blob/main/doc/manual.md"

[tool.poetry]
name = "chess-cli"
version = "0.6.1"
description = "A repl to edit and analyse chess games."
authors = ["Tage Johansson <tajo9185@student.uu.se>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
chess-cli = 'chess_cli.main:main'

[tool.poetry.dependencies]
python = "~3.12"
chess = "^1.11.1"
appdirs = "^1.4.4"
toml = "^0.10.2"
more-itertools = "^10.5.0"
psutil = "^6.1.0"
berserk = "^0.13.2"
authlib = "^1.3.2"
requests = "^2.32.3"
prompt-toolkit = "^3.0.48"
pyaudio = "^0.2.14"
cairosvg = "^2.7.1"
pydantic = "^2.9.2"
spdx-license-list = "^3.25.0"
punwrap = {git = "https://github.com/tage64/punwrap"}
inflect = "^7.4.0"
typeguard = {git = "https://github.com/tage64/typeguard"}
pyperclip = "^1.9.0"
progressbar2 = "^4.5.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
pyright = "^1.1.385"
ruff = "^0.6.1"
nuitka = "^2.4.10"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
fast = true
preview = true
src = "chess_cli/"

[tool.docformatter]
in-place = true
recursive = true
black = true
wrap-summeries = 100
wrap-descriptions = 100

[tool.isort]
src_paths = ["chess_cli/"]
profile = "black"
line_length = 100
py_version = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP",  # pyupgrade
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff
    "I",  # isort
    "D",  # pydocstyle
]
ignore = ["D1", "D2", "D401"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
files = "chess_cli/*.py"
check_untyped_defs = true
warn_unreachable = true

[tool.pyright]
include = ["chess_cli/"]
reportWildcardImportFromLibrary = false
reportIncompatibleMethodOverride = false  # Bug in pyright: Incorrectly classifies setting a setter as an error.
